--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
-    "twin.macro": "^3.1.0"
+    "twin.macro": "^3.1.0",
+    "vite-plugin-svgr": "^2.2.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.24",
+    "@emotion/babel-plugin-jsx-pragmatic": "^0.2.0",
+    "@types/node": "^18.11.11",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.8",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "babel-plugin-macros": "^3.1.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
