--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@lottiefiles/react-lottie-player": "^3.5.0",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/react-lottie": "^1.2.6",
     "axios": "^1.2.1",
+    "lottie-react": "^2.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
